--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello SendVentures
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+	<title>SendVentures</title>
+
+</head>
+
+<body>
+
+<h1>SendVentures, Inc.</h1>
+
+<h2>Copyright 2018</h2>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120542984-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-120542984-1');
+	</script>
+
+</body>
+
+</html>
