--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 
 <html>
@@ -13,6 +15,21 @@
 <h1>SendVentures, Inc.</h1>
 
 <h2>Copyright 2018</h2>
+	
+	
+	
+	<main>
+
+        <p>store email</p>
+        <form action="contactform.php" method="post">
+            <input type="text" name="name" placeholder="full name">
+            <input type="text" name="mail" placeholder="your email">
+            <button type="submit" name="submit">Subscribe</button>
+        </form>
+
+    </main>
+	
+	
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120542984-1"></script>
