--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>store email</p>
         <form action="contactform.php" method="post">
             <input type="text" name="name" placeholder="full name">
-            <input type="text" name="mail" placeholder="your email">
+            <input type="text" name="email" placeholder="your email">
             <button type="submit" name="submit">Subscribe</button>
         </form>
 
