--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 	<h3>Get in touch</h3>
 	
-<form method="POST" action="https://formspree.io/bostonmass15@yahoo.com">
+<form method="POST" action="https://formspree.io/bill@sendventures.com">
   <input type="name" name="name" placeholder="Your name">
   <br>
   <input type="email" name="email" placeholder="Your email">
