--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	
 
-<h1>SendVentures, Inc.</h1>
+<h1>Send Ventures Worldwide, OÜ</h1>
 	
 <br>
 	
@@ -27,7 +27,7 @@
 	
 <br>	
 	
-<h6>Copyright &copy; 2018 SendVentures. All Rights Reserved.</h6>
+<h6>Copyright &copy; 2022 Send Ventures Worldwide OÜ. All Rights Reserved.</h6>
 	
 	
 	
