--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 	<title>SendVentures</title>
 </head>
 <body>
-	
-	
-	
-	
 
 <h1>Send Ventures Worldwide, OÜ</h1>
 	
@@ -16,36 +17,34 @@
 	<h3>Get in touch</h3>
 	
 <form method="POST" action="https://formspree.io/bill@sendventures.com">
-  <input type="name" name="name" placeholder="Your name">
-  <br>
-  <input type="email" name="email" placeholder="Your email">
-  <br>
-  <textarea name="message" placeholder="Your message"></textarea>
-  <br>
-  <button type="submit">Send</button>
-</form>	
+	<div class="mb-3 col-md-2">
+		<label for="name" class="form-label">Name</label>
+		<input type="name" name="name" class="form-control" id="name">
+	</div>
+	<div class="mb-3 col-md-2">
+		<label for="email" class="form-label">Email address</label>
+		<input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+		<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+	</div>
+	<div class="form-group col-md-2">
+		<label for="message">Your message</label>
+		<textarea class="form-control" id="message" rows="3"></textarea>
+	</div>
+	<button type="submit" class="btn btn-primary">Send</button>
+</form>
 	
 <br>	
 	
 <h6>Copyright &copy; 2022 Send Ventures Worldwide OÜ. All Rights Reserved.</h6>
-	
-	
-	
-
-	
-	
-	
-	
-	
-	
+		
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120542984-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-	  gtag('config', 'UA-120542984-1');
+		gtag('config', 'UA-120542984-1');
 	</script>
 
 </body>
