--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 	<h3>Get in touch</h3>
 	
 <form method="POST" action="https://formspree.io/bill@sendventures.com">
-	<div class="mb-3 col-md-2">
+	<div class="mb-3 col-xs-12 col-sm-8 col-md-6 col-lg-4">
 		<label for="name" class="form-label">Name</label>
 		<input type="name" name="name" class="form-control" id="name">
 	</div>
-	<div class="mb-3 col-md-2">
+	<div class="mb-3 col-xs-12 col-sm-8 col-md-6 col-lg-4">
 		<label for="email" class="form-label">Email address</label>
 		<input type="email" class="form-control" id="email" aria-describedby="emailHelp">
 		<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
 	</div>
-	<div class="form-group col-md-2">
+	<div class="mb-3 col-xs-12 col-sm-8 col-md-6 col-lg-4">
 		<label for="message">Your message</label>
 		<textarea class="form-control" id="message" rows="3"></textarea>
 	</div>
