--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script>
+		if (window.location.protocol !== 'https:') {
+			window.location.href = 'https://' + window.location.hostname + window.location.pathname + window.location.search;
+		}
+	</script>
 
 	<title>SendVentures</title>
 </head>
@@ -35,7 +40,7 @@
 	
 <br>	
 	
-<h6>Copyright &copy; 2022 Send Ventures Worldwide OÜ. All Rights Reserved.</h6>
+<h6>Copyright &copy; 2025 Send Ventures Worldwide OÜ. All Rights Reserved.</h6>
 		
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120542984-1"></script>
