--- a/index.html
+++ b/index.html
@@ -3,55 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	<!-- <script>
-		if (window.location.protocol !== 'https:') {
-			window.location.href = 'https://' + window.location.hostname + window.location.pathname + window.location.search;
-		}
-	</script> -->
-
-	<title>SendVentures</title>
+    <!-- Tailwind CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>SendVentures</title>
 </head>
-<body>
+<body class="bg-gray-50 min-h-screen flex flex-col justify-between">
+    <header class="bg-white shadow-md py-6 mb-8">
+        <div class="container mx-auto px-4">
+            <h1 class="text-3xl font-bold text-blue-700 text-center">Send Ventures Worldwide, OÜ</h1>
+        </div>
+    </header>
+    <main class="container mx-auto px-4 flex-1">
+        <div class="max-w-xl mx-auto bg-white rounded-lg shadow p-8">
+            <h3 class="text-xl font-semibold mb-6 text-gray-800 text-center">Get in touch</h3>
+            <form method="POST" action="https://formspree.io/f/mnqewvyy" class="space-y-6">
+                <div>
+                    <label for="name" class="block text-gray-700 font-medium mb-1">Name</label>
+                    <input type="text" name="name" id="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                </div>
+                <div>
+                    <label for="email" class="block text-gray-700 font-medium mb-1">Email address</label>
+                    <input type="email" name="email" id="email" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                </div>
+                <div>
+                    <label for="message" class="block text-gray-700 font-medium mb-1">Your message</label>
+                    <textarea name="message" id="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
+                </div>
+                <button type="submit" class="w-full bg-blue-600 text-white font-semibold py-2 rounded hover:bg-blue-700 transition">Send</button>
+            </form>
+        </div>
+    </main>
+    <footer class="bg-white shadow-inner py-4 mt-8">
+        <div class="container mx-auto px-4 text-center text-gray-500 text-sm">
+            &copy; 2025 Send Ventures Worldwide, OÜ. All rights reserved.
+        </div>
+    </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120542984-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-<h1>Send Ventures Worldwide, OÜ</h1>
-	
-<br>
-	
-	<h3>Get in touch</h3>
-	
-<form method="POST" action="https://formspree.io/bill@sendventures.com">
-	<div class="mb-3 col-xs-12 col-sm-8 col-md-6 col-lg-4">
-		<label for="name" class="form-label">Name</label>
-		<input type="name" name="name" class="form-control" id="name">
-	</div>
-	<div class="mb-3 col-xs-12 col-sm-8 col-md-6 col-lg-4">
-		<label for="email" class="form-label">Email address</label>
-		<input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-		<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-	</div>
-	<div class="mb-3 col-xs-12 col-sm-8 col-md-6 col-lg-4">
-		<label for="message">Your message</label>
-		<textarea class="form-control" id="message" rows="3"></textarea>
-	</div>
-	<button type="submit" class="btn btn-primary">Send</button>
-</form>
-	
-<br>	
-	
-<h6>Copyright &copy; 2025 Send Ventures Worldwide OÜ. All Rights Reserved.</h6>
-		
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120542984-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-120542984-1');
-	</script>
-
+        gtag('config', 'UA-120542984-1');
+    </script>
 </body>
 </html>
