--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="container mx-auto px-4 flex-1">
         <div class="max-w-xl mx-auto bg-white rounded-lg shadow p-8">
             <h3 class="text-xl font-semibold mb-6 text-gray-800 text-center">Get in touch</h3>
-            <form method="POST" action="https://formspree.io/f/mnqewvyy" class="space-y-6">
+            <form method="POST" action="https://formspree.io/bill@sendventures.com" class="space-y-6">
                 <div>
                     <label for="name" class="block text-gray-700 font-medium mb-1">Name</label>
                     <input type="text" name="name" id="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
