adding pre-built Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Tailwind CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- Use built Tailwind CSS -->
+    <link href="dist/output.css" rel="stylesheet">
     <title>SendVentures</title>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col justify-between">
