Adding privacy policy and list of services

--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
         </div>
     </header>
     <main class="container mx-auto px-4 flex-1">
+        <section class="max-w-3xl mx-auto bg-white rounded-lg shadow p-8 mb-8">
+            <h2 class="text-2xl font-bold text-blue-700 mb-6 text-center">Our Services</h2>
+            <div class="grid gap-6 md:grid-cols-2">
+                <div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Custom Software Development</h3>
+                    <p class="text-gray-700">We design and build tailored software solutions that address your unique business challenges, ensuring scalability and reliability from day one.</p>
+                </div>
+                <div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Project Management</h3>
+                    <p class="text-gray-700">Our team oversees your projects from inception to completion, ensuring they are delivered on time, within budget, and to your specifications.</p>
+                </div>
+                <div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Consulting Services</h3>
+                    <p class="text-gray-700">We provide expert advice to help you make informed technology decisions, optimize processes, and achieve your business goals.</p>
+                </div>
+                <div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Maintenance and Support</h3>
+                    <p class="text-gray-700">We offer ongoing support and maintenance to keep your systems running smoothly and securely, minimizing downtime and disruptions.</p>
+                </div>
+                <div>
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Digital Marketing Services</h3>
+                    <p class="text-gray-700">We help you expand your online presence and reach your target audience through effective digital marketing strategies.</p>
+                </div>
+            </div>
+        </section>
         <div class="max-w-xl mx-auto bg-white rounded-lg shadow p-8">
             <h3 class="text-xl font-semibold mb-6 text-gray-800 text-center">Get in touch</h3>
             <form method="POST" action="https://formspree.io/bill@sendventures.com" class="space-y-6">
@@ -35,7 +60,8 @@
     </main>
     <footer class="bg-white shadow-inner py-4 mt-8">
         <div class="container mx-auto px-4 text-center text-gray-500 text-sm">
-            &copy; 2025 Send Ventures Worldwide, OÜ. All rights reserved.
+            &copy; 2025 Send Ventures Worldwide, OÜ. All rights reserved. |
+            <a href="privacy.html" class="text-blue-700 underline">Privacy Policy</a>
         </div>
     </footer>
     <!-- Global site tag (gtag.js) - Google Analytics -->
