--- a/index.html
+++ b/index.html
@@ -8,54 +8,80 @@
     <title>SendVentures</title>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col justify-between">
-    <header class="bg-white shadow-md py-6 mb-8">
-        <div class="container mx-auto px-4">
-            <h1 class="text-3xl font-bold text-blue-700 text-center">Send Ventures Worldwide, OÜ</h1>
+    <header class="bg-gradient-to-r from-blue-700 via-blue-600 to-indigo-700 shadow-md py-8 mb-8">
+        <div class="container mx-auto px-4 flex flex-col items-center">
+            <h1 class="text-4xl font-extrabold text-white tracking-tight drop-shadow-lg mb-2">Send Ventures Worldwide, OÜ</h1>
+            <p class="text-lg text-indigo-100 font-medium">Empowering Your Business Through Technology</p>
         </div>
     </header>
     <main class="container mx-auto px-4 flex-1">
-        <section class="max-w-3xl mx-auto bg-white rounded-lg shadow p-8 mb-8">
-            <h2 class="text-2xl font-bold text-blue-700 mb-6 text-center">Our Services</h2>
-            <div class="grid gap-6 md:grid-cols-2">
-                <div>
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Custom Software Development</h3>
-                    <p class="text-gray-700">We design and build tailored software solutions that address your unique business challenges, ensuring scalability and reliability from day one.</p>
+        <div class="flex flex-col md:flex-row md:space-x-8 items-stretch justify-center">
+            <!-- Services Card -->
+            <section class="flex-1 bg-white/90 rounded-2xl shadow-xl p-8 mb-8 md:mb-0 border-t-4 border-blue-600">
+                <h2 class="text-2xl font-extrabold text-blue-700 mb-6 text-center flex items-center justify-center gap-2">
+                    <svg class="w-7 h-7 text-indigo-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6l4 2"></path><circle cx="12" cy="12" r="10"/></svg>
+                    Our Services
+                </h2>
+                <div class="grid gap-5 md:grid-cols-1">
+                    <div class="flex items-start gap-3 mb-2">
+                        <span class="bg-blue-100 text-blue-700 rounded-full p-2"><svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M9 17v-6h13v6M9 17H5a2 2 0 01-2-2v-6a2 2 0 012-2h4m0 0V7a2 2 0 012-2h4a2 2 0 012 2v2"></path></svg></span>
+                        <div>
+                            <h3 class="font-semibold text-gray-900">Custom Software Development</h3>
+                            <p class="text-gray-700 text-sm">We design and build tailored software solutions that address your unique business challenges, ensuring scalability and reliability from day one.</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start gap-3 mb-2">
+                        <span class="bg-indigo-100 text-indigo-700 rounded-full p-2"><svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M8 17l4-4 4 4m0-4V3a1 1 0 00-1-1h-6a1 1 0 00-1 1v10"></path></svg></span>
+                        <div>
+                            <h3 class="font-semibold text-gray-900">Project Management</h3>
+                            <p class="text-gray-700 text-sm">Our team oversees your projects from inception to completion, ensuring they are delivered on time, within budget, and to your specifications.</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start gap-3 mb-2">
+                        <span class="bg-green-100 text-green-700 rounded-full p-2"><svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01"></path></svg></span>
+                        <div>
+                            <h3 class="font-semibold text-gray-900">Consulting Services</h3>
+                            <p class="text-gray-700 text-sm">We provide expert advice to help you make informed technology decisions, optimize processes, and achieve your business goals.</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start gap-3 mb-2">
+                        <span class="bg-yellow-100 text-yellow-700 rounded-full p-2"><svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"></path></svg></span>
+                        <div>
+                            <h3 class="font-semibold text-gray-900">Maintenance and Support</h3>
+                            <p class="text-gray-700 text-sm">We offer ongoing support and maintenance to keep your systems running smoothly and securely, minimizing downtime and disruptions.</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start gap-3">
+                        <span class="bg-pink-100 text-pink-700 rounded-full p-2"><svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-9 4v8"></path></svg></span>
+                        <div>
+                            <h3 class="font-semibold text-gray-900">Digital Marketing Services</h3>
+                            <p class="text-gray-700 text-sm">We help you expand your online presence and reach your target audience through effective digital marketing strategies.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Project Management</h3>
-                    <p class="text-gray-700">Our team oversees your projects from inception to completion, ensuring they are delivered on time, within budget, and to your specifications.</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Consulting Services</h3>
-                    <p class="text-gray-700">We provide expert advice to help you make informed technology decisions, optimize processes, and achieve your business goals.</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Maintenance and Support</h3>
-                    <p class="text-gray-700">We offer ongoing support and maintenance to keep your systems running smoothly and securely, minimizing downtime and disruptions.</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold text-gray-800 mb-2">Digital Marketing Services</h3>
-                    <p class="text-gray-700">We help you expand your online presence and reach your target audience through effective digital marketing strategies.</p>
-                </div>
-            </div>
-        </section>
-        <div class="max-w-xl mx-auto bg-white rounded-lg shadow p-8">
-            <h3 class="text-xl font-semibold mb-6 text-gray-800 text-center">Get in touch</h3>
-            <form method="POST" action="https://formspree.io/bill@sendventures.com" class="space-y-6">
-                <div>
-                    <label for="name" class="block text-gray-700 font-medium mb-1">Name</label>
-                    <input type="text" name="name" id="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                </div>
-                <div>
-                    <label for="email" class="block text-gray-700 font-medium mb-1">Email address</label>
-                    <input type="email" name="email" id="email" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                </div>
-                <div>
-                    <label for="message" class="block text-gray-700 font-medium mb-1">Your message</label>
-                    <textarea name="message" id="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
-                </div>
-                <button type="submit" class="w-full bg-blue-600 text-white font-semibold py-2 rounded hover:bg-blue-700 transition">Send</button>
-            </form>
+            </section>
+            <!-- Contact Form Card -->
+            <section class="flex-1 bg-gradient-to-br from-indigo-50 via-white to-blue-100 rounded-2xl shadow-xl p-8 border-t-4 border-indigo-600 flex flex-col justify-center">
+                <h3 class="text-xl font-bold mb-6 text-indigo-700 text-center flex items-center justify-center gap-2">
+                    <svg class="w-6 h-6 text-blue-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M16 12a4 4 0 01-8 0m8 0a4 4 0 00-8 0m8 0v4a4 4 0 01-8 0v-4"></path></svg>
+                    Get in touch
+                </h3>
+                <form method="POST" action="https://formspree.io/bill@sendventures.com" class="space-y-6">
+                    <div>
+                        <label for="name" class="block text-gray-700 font-medium mb-1">Name</label>
+                        <input type="text" name="name" id="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white" required>
+                    </div>
+                    <div>
+                        <label for="email" class="block text-gray-700 font-medium mb-1">Email address</label>
+                        <input type="email" name="email" id="email" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white" required>
+                    </div>
+                    <div>
+                        <label for="message" class="block text-gray-700 font-medium mb-1">Your message</label>
+                        <textarea name="message" id="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white" required></textarea>
+                    </div>
+                    <button type="submit" class="w-full bg-gradient-to-r from-blue-600 to-indigo-600 text-white font-semibold py-2 rounded shadow hover:from-blue-700 hover:to-indigo-700 transition">Send</button>
+                </form>
+            </section>
         </div>
     </main>
     <footer class="bg-white shadow-inner py-4 mt-8">
