--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,7 @@
             <h2 class="text-lg font-semibold mt-6 mb-2">5. Contact</h2>
             <p class="mb-4">If you have any questions about this Privacy Policy or our data practices, please contact us at:</p>
             <p class="mb-2">Send Ventures Worldwide, OÜ<br>
-            Tallinn, Estonia<br>
+            Tartu, Estonia<br>
             <a href="mailto:bill@sendventures.com" class="text-blue-700 underline">bill@sendventures.com</a></p>
             <p class="text-gray-500 text-xs mt-8">Last updated: April 2025</p>
         </div>
