--- a/index.html
+++ b/index.html
@@ -3,71 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts: Montserrat -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
+    <!-- Google Fonts: Urbanist -->
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600;800&display=swap" rel="stylesheet">
     <!-- Use built Tailwind CSS -->
     <link href="dist/output.css" rel="stylesheet">
     <style>
-      body, .font-sans { font-family: 'Montserrat', 'ui-sans-serif', 'system-ui', sans-serif; }
+      body, .font-sans { font-family: 'Urbanist', 'ui-sans-serif', 'system-ui', sans-serif; }
     </style>
     <title>SendVentures</title>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col justify-between">
-    <header class="bg-gradient-to-br from-gray-900 via-purple-900 to-pink-700 shadow-2xl py-10 mb-10">
+    <header class="bg-gradient-to-br from-gray-900 via-indigo-900 to-blue-900 shadow-2xl py-7 mb-7">
         <div class="container mx-auto px-4 flex flex-col items-center">
-            <h1 class="text-5xl font-extrabold text-white tracking-tight drop-shadow-xl mb-3 font-sans uppercase">Send Ventures Worldwide, OÜ</h1>
-            <p class="text-xl text-pink-200 font-semibold font-sans">Empowering Your Business Through Technology</p>
+            <h1 class="text-4xl font-extrabold text-white tracking-tight drop-shadow-xl mb-1 font-sans uppercase">Send Ventures Worldwide, OÜ</h1>
+            <p class="text-lg text-indigo-200 font-semibold font-sans">Empowering Your Business Through Technology</p>
         </div>
     </header>
     <main class="container mx-auto px-4 flex-1">
-        <div class="flex flex-col md:flex-row md:space-x-10 items-stretch justify-center">
+        <div class="flex flex-col md:flex-row md:space-x-7 items-stretch justify-center">
             <!-- Services Card -->
-            <section class="flex-1 bg-white/95 rounded-3xl shadow-2xl p-10 mb-10 md:mb-0 border-l-8 border-pink-600 font-sans">
-                <h2 class="text-3xl font-extrabold text-purple-800 mb-8 text-center tracking-wide">Our Services</h2>
-                <div class="grid gap-8 md:grid-cols-1">
-                    <div class="border-l-4 border-purple-500 pl-4 mb-2">
-                        <h3 class="font-bold text-lg text-gray-900 mb-1">Custom Software Development</h3>
-                        <p class="text-gray-700 text-base">We design and build tailored software solutions that address your unique business challenges, ensuring scalability and reliability from day one.</p>
+            <section class="flex-1 bg-white/95 rounded-2xl shadow-2xl p-7 mb-7 md:mb-0 border-l-4 border-indigo-700 font-sans">
+                <h2 class="text-2xl font-extrabold text-indigo-800 mb-5 text-center tracking-wide">Our Services</h2>
+                <div class="grid gap-5 md:grid-cols-1">
+                    <div class="border-l-4 border-indigo-500 pl-3 mb-1">
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Custom Software Development</h3>
+                        <p class="text-gray-700 text-sm">We design and build tailored software solutions that address your unique business challenges, ensuring scalability and reliability from day one.</p>
                     </div>
-                    <div class="border-l-4 border-pink-500 pl-4 mb-2">
-                        <h3 class="font-bold text-lg text-gray-900 mb-1">Project Management</h3>
-                        <p class="text-gray-700 text-base">Our team oversees your projects from inception to completion, ensuring they are delivered on time, within budget, and to your specifications.</p>
+                    <div class="border-l-4 border-blue-500 pl-3 mb-1">
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Project Management</h3>
+                        <p class="text-gray-700 text-sm">Our team oversees your projects from inception to completion, ensuring they are delivered on time, within budget, and to your specifications.</p>
                     </div>
-                    <div class="border-l-4 border-teal-500 pl-4 mb-2">
-                        <h3 class="font-bold text-lg text-gray-900 mb-1">Consulting Services</h3>
-                        <p class="text-gray-700 text-base">We provide expert advice to help you make informed technology decisions, optimize processes, and achieve your business goals.</p>
+                    <div class="border-l-4 border-teal-500 pl-3 mb-1">
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Consulting Services</h3>
+                        <p class="text-gray-700 text-sm">We provide expert advice to help you make informed technology decisions, optimize processes, and achieve your business goals.</p>
                     </div>
-                    <div class="border-l-4 border-blue-500 pl-4 mb-2">
-                        <h3 class="font-bold text-lg text-gray-900 mb-1">Maintenance and Support</h3>
-                        <p class="text-gray-700 text-base">We offer ongoing support and maintenance to keep your systems running smoothly and securely, minimizing downtime and disruptions.</p>
+                    <div class="border-l-4 border-indigo-400 pl-3 mb-1">
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Maintenance and Support</h3>
+                        <p class="text-gray-700 text-sm">We offer ongoing support and maintenance to keep your systems running smoothly and securely, minimizing downtime and disruptions.</p>
                     </div>
-                    <div class="border-l-4 border-yellow-500 pl-4 mb-2">
-                        <h3 class="font-bold text-lg text-gray-900 mb-1">Digital Marketing Services</h3>
-                        <p class="text-gray-700 text-base">We help you expand your online presence and reach your target audience through effective digital marketing strategies.</p>
+                    <div class="border-l-4 border-yellow-500 pl-3 mb-1">
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Digital Marketing Services</h3>
+                        <p class="text-gray-700 text-sm">We help you expand your online presence and reach your target audience through effective digital marketing strategies.</p>
                     </div>
-                    <div class="border-l-4 border-indigo-500 pl-4">
-                        <h3 class="font-bold text-lg text-gray-900 mb-1">Applied AI Solutions</h3>
-                        <p class="text-gray-700 text-base">We leverage the latest advancements in artificial intelligence to automate workflows, enhance decision-making, and deliver real-world value for your business.</p>
+                    <div class="border-l-4 border-indigo-700 pl-3">
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Applied AI Solutions</h3>
+                        <p class="text-gray-700 text-sm">We leverage the latest advancements in artificial intelligence to automate workflows, enhance decision-making, and deliver real-world value for your business.</p>
                     </div>
                 </div>
             </section>
             <!-- Contact Form Card -->
-            <section class="flex-1 bg-gradient-to-br from-pink-50 via-white to-purple-100 rounded-3xl shadow-2xl p-10 border-l-8 border-purple-600 flex flex-col justify-center font-sans">
-                <h3 class="text-2xl font-bold mb-8 text-pink-700 text-center">Get in touch</h3>
-                <form method="POST" action="https://formspree.io/bill@sendventures.com" class="space-y-7">
+            <section class="flex-1 bg-gradient-to-br from-indigo-50 via-white to-blue-100 rounded-2xl shadow-2xl p-7 border-l-4 border-indigo-700 flex flex-col justify-center font-sans">
+                <h3 class="text-xl font-bold mb-5 text-indigo-700 text-center">Get in touch</h3>
+                <form method="POST" action="https://formspree.io/bill@sendventures.com" class="space-y-5">
                     <div>
                         <label for="name" class="block text-gray-700 font-semibold mb-1">Name</label>
-                        <input type="text" name="name" id="name" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 bg-white" required>
+                        <input type="text" name="name" id="name" class="w-full px-3 py-1.5 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500 bg-white text-sm" required>
                     </div>
                     <div>
                         <label for="email" class="block text-gray-700 font-semibold mb-1">Email address</label>
-                        <input type="email" name="email" id="email" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 bg-white" required>
+                        <input type="email" name="email" id="email" class="w-full px-3 py-1.5 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500 bg-white text-sm" required>
                     </div>
                     <div>
                         <label for="message" class="block text-gray-700 font-semibold mb-1">Your message</label>
-                        <textarea name="message" id="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-pink-500 bg-white" required></textarea>
+                        <textarea name="message" id="message" rows="4" class="w-full px-3 py-1.5 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500 bg-white text-sm" required></textarea>
                     </div>
-                    <button type="submit" class="w-full bg-gradient-to-r from-purple-700 via-pink-600 to-yellow-500 text-white font-bold py-2 rounded shadow hover:from-pink-700 hover:to-yellow-600 transition">Send</button>
+                    <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 rounded shadow transition">Send</button>
                 </form>
             </section>
         </div>
