Add Umami analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600;800&display=swap" rel="stylesheet">
     <!-- Use built Tailwind CSS -->
     <link href="dist/output.css" rel="stylesheet">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="d05b59ed-80df-4dd9-a093-d7c5323bf18e"></script>
     <style>
       body, .font-sans { font-family: 'Urbanist', 'ui-sans-serif', 'system-ui', sans-serif; }
     </style>
