Add Umami analytics

--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Send Ventures Worldwide, OÜ</title>
     <link href="dist/output.css" rel="stylesheet">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="d05b59ed-80df-4dd9-a093-d7c5323bf18e"></script>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col justify-between">
     <main class="container mx-auto px-4 py-8 flex-1">
