--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2 class="text-2xl font-extrabold text-indigo-800 mb-5 text-center tracking-wide">Our Services</h2>
                 <div class="grid gap-5 md:grid-cols-1">
                     <div class="border-l-4 border-indigo-500 pl-3 mb-1">
-                        <h3 class="font-bold text-base text-gray-900 mb-0.5">Custom Software Development</h3>
+                        <h3 class="font-bold text-base text-gray-900 mb-0.5"><a href="current-projects.html" class="text-blue-700 underline hover:text-blue-900 transition">Custom Software Development</a></h3>
                         <p class="text-gray-700 text-sm">We design and build tailored software solutions that address your unique business challenges, ensuring scalability and reliability from day one.</p>
                     </div>
                     <div class="border-l-4 border-blue-500 pl-3 mb-1">
