Update current projects

--- a/current-projects.html
+++ b/current-projects.html
@@ -29,7 +29,7 @@
                     <div class="text-gray-700 text-sm ml-2 mt-1">Share your contact info in the event of an emergency</div>
                 </li>
                 <li>
-                    <span class="font-bold">Pronunciation Professor</span> <a href="https://pronunciationprofessor.com" class="text-blue-700 underline text-sm ml-1" target="_blank" rel="noopener">(pronunciationprofessor.com)</a>
+                    <a href="https://pronunciationprofessor.com" class="text-blue-700 underline font-bold" target="_blank" rel="noopener">Pronunciation Professor</a>
                     <div class="text-gray-700 text-sm ml-2 mt-1">Helping non-native speakers overcome pronunciation challenges and sound like a native speaker</div>
                 </li>
             </ul>
